Fixes mobile overflow issues

--- a/sass/homeassistant/aside/_buy_dialog.scss
+++ b/sass/homeassistant/aside/_buy_dialog.scss
@@ -10,7 +10,8 @@
         z-index: 1200;
 
         &.open {
-            display: grid;
+            display: flex;
+            flex-direction: column;
         }
 
         &-inner {
@@ -21,6 +22,7 @@
             max-width: 624px;
             padding: 20px;
             width: 100%;
+            overflow: hidden;
         }
 
         &-header {
@@ -48,6 +50,8 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+            max-height: 100%;
+            overflow: hidden;
 
             @media (min-width: 704px) {
                 flex-direction: row;
@@ -112,7 +116,7 @@
             &-content-wrapper {
                 flex-grow: 1;
                 height: 100%;
-                max-height: 440px;
+                max-height: 475px;
                 overflow-y: auto;
             }
 
